[package]
name = "day_05"
version = "0.1.0"
edition = "2021"
authors = ["weichslgartner <weichslgartner@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"

[features]
default = []
brute-force = []